# Einfuehrung-GIS-fur-Geowissenschaften-2025

./: .readthedocs.yaml  README.md  push.sh  setup.cfg
source/: conf.py  index.rst
source/_static/css/: custom.css
source/course-info/: course-info.rst  grading.rst  licensing.rst  resources.rst  theteam.rst
source/gis-info/: datenorganisation.rst  einstellungen.rst  geodatenbeschaffung.rst  geodatenorganisation.rst  glossar.rst  hinweise.rst  intro.rst  koordinatensysteme.rst  vocabulary.rst  was-ist-gis.rst
source/lessons/Exercise-0/: exercise-0.rst  overview.rst
source/lessons/L0/: exercise-0.rst  installation.rst  motivation.rst  overview.rst  wiki.rst
source/lessons/L1/: exercise-1-tectonicplates.rst  exercise-1-tectonicplates_additional.rst  overview.rst
source/lessons/L2/: exercise-2.rst  exercise-2_additional.rst  overview.rst
source/lessons/L3/: exercise-3-vulcanoes.rst  exercise-3-vulcanoes_additional.rst  exercise-3.rst  overview.rst
source/lessons/L4/: exercise-4.rst  exercise-4_ahrweiler.rst  exercise-4b.rst
source/lessons/L5/: digitalisieren.rst  exercise-5.rst  exercise-5a-iceland.rst  exercise-5a_geologie.rst  exercise-5b-iceland.rst  exercise-5b.rst  georeferenzieren.rst
source/lessons/L6/: exercise-6.rst  exercise-6a.rst  exercise-6b.rst  overview.rst
source/lessons/L7/: exercise-7a.rst  exercise-7b.rst  exercise-7b_additional.rst  overview.rst  overview_2.rst
source/lessons/L8/: exercise-8.rst
source/lessons/L9/: exercise-9.rst  overview.rst
