[metadata]
name = GIS für Geowissenschaften
version = 2025
license = MIT
description = Exercices and wiki etc. for the lecture.
author = Mario Blersch
url = https://github.com/GeowazM/Einfuehrung-GIS-fur-Geowissenschaften-2025
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = geo-python
github_repo = site